# gsc-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gsc_cli/: config.py  errors.py  main.py  output.py
src/gsc_cli/auth/: client.py  commands.py
src/gsc_cli/inspect/: commands.py
src/gsc_cli/query/: commands.py  pagination.py
src/gsc_cli/sites/: commands.py
tests/: conftest.py  test_cli.py  test_errors.py  test_output.py  test_query.py
